Fixed playground checklist spacing

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -163,6 +163,13 @@ height: 30px;
   display: inline;
 }
 
+.makeFit{
+  font-size: 13.5px;
+}
+.checkBoxHome{
+  margin-bottom: 15px;
+}
+
 .dropDownPlayground{
   overflow: scroll;
 }
